# wall-x

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  requirements-libero.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
scripts/: README.md  compute_norm_stats.py  draw_openloop_plot.py  fake_inference.py  infer_libero.py  merge_sharded_weights.py  merge_tokenizer.py  run_libero.sh  run_serving.sh
wall_x/_vendor/harrix/adapters/: qwen_vlact.py
wall_x/_vendor/harrix/serving/: launch_serving.py
wall_x/_vendor/x2robot_utils/: geometry.py  grounding.py
wall_x/config/: infra_config.py  registry.py
wall_x/data/: __init__.py  _registry.py
wall_x/data/backends/lerobot/: build.py  config.py  loader.py  utils.py
wall_x/model/: registry.py
wall_x/model/core/: vla_mixin.py
wall_x/model/core/action/: moe.py  (+2 more)
wall_x/model/qact/: tokenizer_mixin.py
wall_x/trainer/: trainer_utils.py
wall_x/trainer/adapters/: __init__.py  base_adapter.py  vla_model_adapter.py
wall_x/trainer/fsdp_trainer/: __init__.py  base_trainer.py  checkpoint_io.py  distribution_strategy.py  fsdp_trainer.py  train_fsdp.py
wall_x/trainer/optimizer/: __init__.py
wall_x/trainer/scheduler/: scheduler.py
wall_x/utils/: constant.py  cudagraph_wrapper.py  logger.py  metrics.py  timers.py
workspace/: README.md
workspace/example/: libero.yml  maniparena_example.yml
workspace/example/lerobot/: qwen2_5_lerobot_template.yml
workspace/models_config/: qwen2_5_moe_flash.json
(+30 files in other folders)
